--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <span>Entradas</span>
                   <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
@@ -32,7 +32,7 @@
                 <span>Saídas</span>
                 <img src="./assets/expense.svg" alt="Imagem de saídas">
               </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
@@ -40,7 +40,7 @@
                 <span>Total</span>
                 <img src="./assets/total.svg" alt="Imagem de total">
               </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
         </section>
 
@@ -59,30 +59,6 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td class="description">Luz</td>
-                    <td class="expense">- R$ 500,00</td>
-                    <td class="date">23/01/2021</td>
-                    <td>
-                      <img src="./assets/minus.svg" alt="Remover transação">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="description">Criação website</td>
-                    <td class="income">- R$ 5.000,00</td>
-                    <td class="date">23/01/2021</td>
-                    <td>
-                      <img src="./assets/minus.svg" alt="Remover transação">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="description">Internet</td>
-                    <td class="expense">- R$ 200,00</td>
-                    <td class="date">23/01/2021</td>
-                    <td>
-                      <img src="./assets/minus.svg" alt="Remover transação">
-                    </td>
-                  </tr>
                 </tbody>
               </table>
         </section>
@@ -92,7 +68,7 @@
       <div class="modal">
         <div id="form">
           <h2>Nova Transação</h2>
-          <form action="">
+          <form action="" onsubmit="Form.submit(event)">
             <div class="input-group">
               <label class="sr-only" for="description">Descrição</label>
               <input type="text" id="description" name="description" placeholder="Descrição">
@@ -124,15 +100,6 @@
         <p>dev.finances$</p>
     </footer>
 
-    <script>
-      const Modal = {
-        open() {
-          document.querySelector('.modal-overlay').classList.add('active')
-        },
-        close() {
-          document.querySelector('.modal-overlay').classList.remove('active')
-        }
-      }
-    </script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
